// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link as element "a" danger should render the correct output when block element 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-red-600 hover:text-red-700 focus:ring-red-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" danger should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-red-600 hover:text-red-700 focus:ring-red-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" danger should render the correct output when size is md 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-red-600 hover:text-red-700 focus:ring-red-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" danger should render the correct output when size is none 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-red-600 hover:text-red-700 focus:ring-red-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" danger should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-red-600 hover:text-red-700 focus:ring-red-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" primary should render the correct output when block element 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" primary should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" primary should render the correct output when size is md 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" primary should render the correct output when size is none 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" primary should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" secondary should render the correct output when block element 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" secondary should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" secondary should render the correct output when size is md 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" secondary should render the correct output when size is none 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" secondary should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" success should render the correct output when block element 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-green-600 hover:text-green-700 focus:ring-green-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" success should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-green-600 hover:text-green-700 focus:ring-green-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" success should render the correct output when size is md 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-green-600 hover:text-green-700 focus:ring-green-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" success should render the correct output when size is none 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-green-600 hover:text-green-700 focus:ring-green-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" success should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-green-600 hover:text-green-700 focus:ring-green-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" warning should render the correct output when block element 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" warning should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" warning should render the correct output when size is md 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" warning should render the correct output when size is none 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "a" warning should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <a
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    href="https://motech-development.github.io/platform/"
  >
    Hello, world
  </a>
</DocumentFragment>
`;

exports[`Link as element "button" danger should render the correct output when block element 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-red-600 hover:text-red-700 focus:ring-red-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" danger should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-red-600 hover:text-red-700 focus:ring-red-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" danger should render the correct output when size is md 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-red-600 hover:text-red-700 focus:ring-red-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" danger should render the correct output when size is none 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-red-600 hover:text-red-700 focus:ring-red-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" danger should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-red-600 hover:text-red-700 focus:ring-red-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" primary should render the correct output when block element 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" primary should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" primary should render the correct output when size is md 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" primary should render the correct output when size is none 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" primary should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-blue-600 hover:text-blue-700 focus:ring-blue-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" secondary should render the correct output when block element 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" secondary should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" secondary should render the correct output when size is md 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" secondary should render the correct output when size is none 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" secondary should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-gray-600 hover:text-gray-700 focus:ring-gray-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" success should render the correct output when block element 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-green-600 hover:text-green-700 focus:ring-green-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" success should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-green-600 hover:text-green-700 focus:ring-green-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" success should render the correct output when size is md 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-green-600 hover:text-green-700 focus:ring-green-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" success should render the correct output when size is none 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-green-600 hover:text-green-700 focus:ring-green-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" success should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-green-600 hover:text-green-700 focus:ring-green-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" warning should render the correct output when block element 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 block w-full text-center text-base text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" warning should render the correct output when size is lg 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-lg text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" warning should render the correct output when size is md 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" warning should render the correct output when size is none 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-base text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;

exports[`Link as element "button" warning should render the correct output when size is sm 1`] = `
<DocumentFragment>
  <button
    class="appearance-none bg-none border-0 font-semibold underline hover:no-underline focus:outline-none focus:ring-2 focus:ring-offset-2 inline-block text-sm text-yellow-600 hover:text-yellow-700 focus:ring-yellow-500"
    type="button"
  >
    Hello, world
  </button>
</DocumentFragment>
`;
